--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p>Nossa clínica médica está aberto de <strong> segunda à sábado das 6:00 às 21:00</strong></p>
                 <p>Através do telefone/WhatsApp <strong>(21) 99966-5555</strong> você pode fazer o agendamento de consultas e exames.</p>
                 <p>Estamos localizados no estacionamento do Via Parque Shopping <strong>av. Ayrton Senna, 3000 - Barra da Tijuca, Rio de Janeiro.</strong></p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.1179282687403!2d-43.36676602389497!3d-22.982690579201776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2c2293fa63%3A0x539cb07246f0e38d!2sVia%20Parque%20Shopping!5e0!3m2!1spt-BR!2sbr!4v1748902701145!5m2!1spt-BR!2sbr" width="1850" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.1179282687403!2d-43.36676602389497!3d-22.982690579201776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2c2293fa63%3A0x539cb07246f0e38d!2sVia%20Parque%20Shopping!5e0!3m2!1spt-BR!2sbr!4v1748902701145!5m2!1spt-BR!2sbr" width="98%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
         </section>
     </main>
