--- a/especialidades.html
+++ b/especialidades.html
@@ -45,7 +45,7 @@
                 <figure>
                 <img src="assets/ortopedia.png" alt="ortopedia">
                 </figure>
-                <div>
+                <div class="peppa">
                 <table id="especialidades">
                     <thead>
                         <tr>
